--- a/custom_components/mawaqit/translations/fr.json
+++ b/custom_components/mawaqit/translations/fr.json
@@ -9,7 +9,14 @@
             "user": {
                 "description": "Inscvrivez-vous sur https://mawaqit.net/ puis connectez-vous ci-dessous. La mosqu\u00e9e la plus proche sera chosie mais vous pouvez la changer ult\u00e9rieurement dans les Param\u00e9tres du plugin Mawaqit:",
                 "title": "Installation de Mawaqit"
-            }
+            },
+      "mosques": {
+        "title": "Choisir votre mosqu\u00e9e",
+        "data": {
+          "mosques": "Diff\u00e9rentes mosqu\u00e9es autour de vous, s\u00e9lectionnez une:"
+        }
+      }  
+            
         }
     },
     "options": {
