--- a/custom_components/mawaqit/translations/en.json
+++ b/custom_components/mawaqit/translations/en.json
@@ -2,23 +2,32 @@
   "config": {
       "abort": {
           "one_instance_allowed": "Only a single instance is necessary.",
-          "no_mosque": "Sorry, no MAWAQIT mosque in the neighborhood.",
-          "wrong_credential": "Wrong login or password, please check"
+          "no_mosque": "Sorry, there's no MAWAQIT mosque in the neighborhood."
       },
       "step": {
           "user": {
-              "description": "Register on https://mawaqit.net/ and connect below. The nearest mosque to your house will be chosen but you can change it later on in the addon parameters",
-              "title": "Set up MAWAQIT Prayer Times"
+              "description": "Register on https://mawaqit.net/ and connect below. The nearest mosque to your house will be chosen but you can change it later on in the add-on parameters.",
+              "data": {
+                "username": "E-mail",
+                "password": "Password",
+                "server": "Server"
+              },
+              "title": "Set-up MAWAQIT Prayer Times"
           },
       "mosques": {
         "title": "Select your favourite mosque",
         "data": {
-          "mosques": "Multiple mosques available arround you, select one:"
+          "mosques": "Multiple mosques are available around you, select one :"
         }
       }            
           
           
+      },
+
+      "error": {
+        "wrong_credential": "Wrong login or password, please retry."
       }
+
   },
   "options": {
       "step": {
