--- a/custom_components/mawaqit/translations/en.json
+++ b/custom_components/mawaqit/translations/en.json
@@ -1,42 +1,53 @@
 {
+  "title": "MAWAQIT",
   "config": {
-      "abort": {
-          "one_instance_allowed": "Only a single instance is necessary.",
-          "no_mosque": "Sorry, there's no MAWAQIT mosque in the neighborhood."
+    "step": {
+      "user": {
+        "title": "MAWAQIT",
+        "description": "Register on https://mawaqit.net/ and connect below. The 5 nearest mosques to your location will be suggested and you will choose your favourite one.",
+        "data": {
+          "username": "E-mail",
+          "password": "Password",
+          "server": "Server"
+        }
       },
-      "step": {
-          "user": {
-              "description": "Register on https://mawaqit.net/ and connect below. The nearest mosque to your house will be chosen but you can change it later on in the add-on parameters.",
-              "data": {
-                "username": "E-mail",
-                "password": "Password",
-                "server": "Server"
-              },
-              "title": "Set-up MAWAQIT Prayer Times"
-          },
+      
       "mosques": {
-        "title": "Select your favourite mosque",
+        "title": "Your favourite mosque",
         "data": {
           "mosques": "Multiple mosques are available around you, select one :"
         }
-      }            
-          
-          
       },
-
-      "error": {
-        "wrong_credential": "Wrong login or password, please retry."
+      
+      "select_server": {
+        "title": "Select your favourite mosque",
+        "description": "Multiple mosques available, select one :",
+        "data": {
+          "username": "[%key:common::config_flow::data::email%]",
+          "password": "[%key:common::config_flow::data::password%]",
+          "server": "Server"
+        }
       }
+    },
+
+    "error": {
+      "wrong_credential": "Wrong login or password, please retry.",
+      "cannot_connect_to_server": "Cannot connect to the server, please retry later."
+    },
+
+    "abort": {
+      "one_instance_allowed": "Only a single instance is necessary.",
+      "no_mosque": "Sorry, there's no MAWAQIT mosque in your neighborhood."
+    }
 
   },
   "options": {
-      "step": {
-          "init": {
-              "data": {
-                  "calculation_method": "Change your favourite mosque"
-              }
-          }
+    "step": {
+      "init": {
+        "data": {
+          "calculation_method": "Change your mosque :"
+        }
       }
-  },
-  "title": "MAWAQIT"
+    }
+  }
 }
