--- a/custom_components/mawaqit/translations/en.json
+++ b/custom_components/mawaqit/translations/en.json
@@ -1,53 +1,48 @@
 {
-  "title": "MAWAQIT",
-  "config": {
-    "step": {
-      "user": {
-        "title": "MAWAQIT",
-        "description": "Register on https://mawaqit.net/ and connect below. The 5 nearest mosques to your location will be suggested and you will choose your favourite one.",
-        "data": {
-          "username": "E-mail",
-          "password": "Password",
-          "server": "Server"
+    "config": {
+        "abort": {
+            "no_mosque": "Sorry, there's no MAWAQIT mosque in your neighborhood.",
+            "one_instance_allowed": "Une seule instance (entr\u00e9e) MAWAQIT est suffisante. Si vous souhaitez modifier votre mosqu\u00e9e, veuillez cliquer sur le bouton \"Configurer\" de l'instance existante."
+        },
+        "error": {
+            "cannot_connect_to_server": "Cannot connect to the server, please retry later.",
+            "wrong_credential": "Wrong login or password, please retry."
+        },
+        "step": {
+            "mosques": {
+                "data": {
+                    "mosques": "Multiple mosques are available around you, select one :"
+                },
+                "title": "Your favourite mosque"
+            },
+            "select_server": {
+                "data": {
+                    "password": "Password",
+                    "server": "Server",
+                    "username": "Email"
+                },
+                "description": "Multiple mosques available, select one :",
+                "title": "Select your favourite mosque"
+            },
+            "user": {
+                "data": {
+                    "password": "Password",
+                    "server": "Server",
+                    "username": "E-mail"
+                },
+                "description": "Register on https://mawaqit.net/ and connect below. The 5 nearest mosques to your location will be suggested and you will choose your favourite one.",
+                "title": "login to MAWAQIT"
+            }
         }
-      },
-      
-      "mosques": {
-        "title": "Your favourite mosque",
-        "data": {
-          "mosques": "Multiple mosques are available around you, select one :"
-        }
-      },
-      
-      "select_server": {
-        "title": "Select your favourite mosque",
-        "description": "Multiple mosques available, select one :",
-        "data": {
-          "username": "[%key:common::config_flow::data::email%]",
-          "password": "[%key:common::config_flow::data::password%]",
-          "server": "Server"
-        }
-      }
     },
-
-    "error": {
-      "wrong_credential": "Wrong login or password, please retry.",
-      "cannot_connect_to_server": "Cannot connect to the server, please retry later."
-    },
-
-    "abort": {
-      "one_instance_allowed": "One MAWAQIT entry is enough. If you want to change your mosque, please click on the \"Configure\" button of the existing entry.",
-      "no_mosque": "Sorry, there's no MAWAQIT mosque in your neighborhood."
-    }
-
-  },
-  "options": {
-    "step": {
-      "init": {
-        "data": {
-          "calculation_method": "Change your mosque :"
+    "options": {
+        "step": {
+            "init": {
+                "data": {
+                    "calculation_method": "Change your mosque :"
+                }
+            }
         }
-      }
-    }
-  }
+    },
+    "title": "Setup MAWAQIT"
 }
